--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-table": "^7.7.0",
     "react-toastify": "^8.0.3",
     "recharts": "^2.1.4",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
